Voter Service test-cases Added